tests/NormalTests/paczka1/fuzzy1/29573776.err
Error in line 1: xbz4yBu8f S66 67,9
Error in line 29: EFVx6L1IHFa S802 67,5
Error in line 30: EFVx6L1IHFa A956 74,7
Error in line 36: rI18sV A956 23,1
Error in line 28: rOHtiQ570 A725 38,5
